# ledgerline

./: .gitignore  .oasdiff-ignore  .oasdiff-severity  .spectral.yaml  openapi.yaml  package-lock.json  package.json  pyproject.toml  render.yaml
.github/: dependabot.yml
.github/workflows/: api.yml  dependabot.yaml  docs.yaml  service.yaml
.postman/: resources.yaml  workflows.yaml
app/: dependencies.py  main.py  problems.py
app/customers/: repository.py  router.py  schemas.py
docs-site/: index.html
postman/collections/Ledgerline API/.resources/: definition.yaml
postman/collections/Ledgerline API/customers/: Create Customer.request.yaml  Get a Customer.request.yaml  List Customers.request.yaml
postman/collections/Ledgerline API/customers/.resources/: definition.yaml
postman/collections/Ledgerline API/customers/.resources/Create Customer.resources/examples/: An unexpected error occurred on Ledgerline's side. Retrying with.example.yaml  Created.example.yaml  No valid API key was provided. Include your key in the Authoriza.example.yaml  The request was malformed — missing required headers, invalid.example.yaml  The request was well-formed but failed semantic validation — f.example.yaml
postman/collections/Ledgerline API/plans/: Create Plan.request.yaml  Get a Plan.request.yaml  List Plans.request.yaml
postman/collections/Ledgerline API/plans/.resources/: definition.yaml
postman/environments/: Local Mock.environment.yaml
tests/: test_customers.py  test_errors.py  test_health.py
(+19 files in other folders)
