[project]
name = "ledgerline"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.basedpyright]
venvPath = "."
venv = ".venv"